--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 
 .container {
   display: flex;
-  background: url('img/bg1.jpg');
+  background: url('bg1.jpg');
   background-size: cover;
   background-position: center;
   height: 100vh;
